<resources>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_name">Digital Heroes</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Todos</string>
    <string name="title_section2">Categorías</string>
    <string name="title_section3">Autores</string>
    <string name="title_section4">Favoritos</string>
    <string name="title_section5">Contacta</string>
    <string name="loading">Cargando...</string>
    <string name="description">Descripción</string>
    <string name="title">Título</string>
    <string name="image">Imagen</string>
    <string name="no_image">La imagen no se pudo cargar</string>
    <string name="category_advertising">Advertising</string>
    <string name="category_creatividad">Creatividad</string>
    <string name="category_inside">Inside Góbalo</string>
    <string name="category_marketing">Marketing Digital y Social Media</string>
    <string name="category_negocios">Negocios</string>
    <string name="category_seo">SEO y SEM</string>
    <string name="category_web">Web y Programación</string>
    <string name="author_01101">Super 01101</string>
    <string name="author_code">Super Code</string>
    <string name="author_craft">Super Craft</string>
    <string name="author_crea">Super Crea</string>
    <string name="author_idea">Super Idea</string>
    <string name="author_numbers">Super Numbers</string>
    <string name="author_pencil">Super Pencil</string>
    <string name="author_pixel">Super Pixel</string>
    <string name="author_sem">Super SEM</string>
    <string name="author_social">Super Social</string>
    <string name="author_speed">Super Speed</string>
    <string name="author_trix">Super Trix</string>
    <string name="author_01101_short">01101</string>
    <string name="author_code_short">Code</string>
    <string name="author_craft_short">Craft</string>
    <string name="author_crea_short">Crea</string>
    <string name="author_idea_short">Idea</string>
    <string name="author_numbers_short">Numbers</string>
    <string name="author_pencil_short">Pencil</string>
    <string name="author_pixel_short">Pixel</string>
    <string name="author_sem_short">SEM</string>
    <string name="author_social_short">Social</string>
    <string name="author_speed_short">Speed</string>
    <string name="author_trix_short">Trix</string>
    <string name="icon_glass">&#xf000;</string>
    <string name="icon_music">&#xf001;</string>
    <string name="icon_search">&#xf002;</string>
    <string name="icon_envelope">&#xf003;</string>
    <string name="icon_heart">&#xf004;</string>
    <string name="icon_star">&#xf005;</string>
    <string name="icon_star_empty">&#xf006;</string>
    <string name="icon_user">&#xf007;</string>
    <string name="icon_film">&#xf008;</string>
    <string name="icon_th_large">&#xf009;</string>
    <string name="icon_th">&#xf00a;</string>
    <string name="icon_th_list">&#xf00b;</string>
    <string name="icon_ok">&#xf00c;</string>
    <string name="icon_remove">&#xf00d;</string>
    <string name="icon_zoom_in">&#xf00e;</string>
    <string name="icon_zoom_out">&#xf010;</string>
    <string name="icon_off">&#xf011;</string>
    <string name="icon_signal">&#xf012;</string>
    <string name="icon_cog">&#xf013;</string>
    <string name="icon_trash">&#xf014;</string>
    <string name="icon_home">&#xf015;</string>
    <string name="icon_file_o">&#xf016;</string>
    <string name="icon_time">&#xf017;</string>
    <string name="icon_road">&#xf018;</string>
    <string name="icon_download_alt">&#xf019;</string>
    <string name="icon_download">&#xf01a;</string>
    <string name="icon_upload">&#xf01b;</string>
    <string name="icon_inbox">&#xf01c;</string>
    <string name="icon_play_circle">&#xf01d;</string>
    <string name="icon_repeat">&#xf01e;</string>
    <string name="icon_refresh">&#xf021;</string>
    <string name="icon_list_alt">&#xf022;</string>
    <string name="icon_lock">&#xf023;</string>
    <string name="icon_flag">&#xf024;</string>
    <string name="icon_headphones">&#xf025;</string>
    <string name="icon_volume_off">&#xf026;</string>
    <string name="icon_volume_down">&#xf027;</string>
    <string name="icon_volume_up">&#xf028;</string>
    <string name="icon_qrcode">&#xf029;</string>
    <string name="icon_barcode">&#xf02a;</string>
    <string name="icon_tag">&#xf02b;</string>
    <string name="icon_tags">&#xf02c;</string>
    <string name="icon_book">&#xf02d;</string>
    <string name="icon_bookmark">&#xf02e;</string>
    <string name="icon_print">&#xf02f;</string>
    <string name="icon_camera">&#xf030;</string>
    <string name="icon_font">&#xf031;</string>
    <string name="icon_bold">&#xf032;</string>
    <string name="icon_italic">&#xf033;</string>
    <string name="icon_text_height">&#xf034;</string>
    <string name="icon_text_width">&#xf035;</string>
    <string name="icon_align_left">&#xf036;</string>
    <string name="icon_align_center">&#xf037;</string>
    <string name="icon_align_right">&#xf038;</string>
    <string name="icon_align_justify">&#xf039;</string>
    <string name="icon_list">&#xf03a;</string>
    <string name="icon_indent_left">&#xf03b;</string>
    <string name="icon_indent_right">&#xf03c;</string>
    <string name="icon_facetime_video">&#xf03d;</string>
    <string name="icon_picture">&#xf03e;</string>
    <string name="icon_pencil">&#xf040;</string>
    <string name="icon_map_marker">&#xf041;</string>
    <string name="icon_adjust">&#xf042;</string>
    <string name="icon_tint">&#xf043;</string>
    <string name="icon_edit">&#xf044;</string>
    <string name="icon_share">&#xf045;</string>
    <string name="icon_check">&#xf046;</string>
    <string name="icon_move">&#xf047;</string>
    <string name="icon_step_backward">&#xf048;</string>
    <string name="icon_fast_backward">&#xf049;</string>
    <string name="icon_backward">&#xf04a;</string>
    <string name="icon_play">&#xf04b;</string>
    <string name="icon_pause">&#xf04c;</string>
    <string name="icon_stop">&#xf04d;</string>
    <string name="icon_forward">&#xf04e;</string>
    <string name="icon_fast_forward">&#xf050;</string>
    <string name="icon_step_forward">&#xf051;</string>
    <string name="icon_eject">&#xf052;</string>
    <string name="icon_chevron_left">&#xf053;</string>
    <string name="icon_chevron_right">&#xf054;</string>
    <string name="icon_plus_sign">&#xf055;</string>
    <string name="icon_minus_sign">&#xf056;</string>
    <string name="icon_remove_sign">&#xf057;</string>
    <string name="icon_ok_sign">&#xf058;</string>
    <string name="icon_question_sign">&#xf059;</string>
    <string name="icon_info_sign">&#xf05a;</string>
    <string name="icon_screenshot">&#xf05b;</string>
    <string name="icon_remove_circle">&#xf05c;</string>
    <string name="icon_ok_circle">&#xf05d;</string>
    <string name="icon_ban_circle">&#xf05e;</string>
    <string name="icon_arrow_left">&#xf060;</string>
    <string name="icon_arrow_right">&#xf061;</string>
    <string name="icon_arrow_up">&#xf062;</string>
    <string name="icon_arrow_down">&#xf063;</string>
    <string name="icon_share_alt">&#xf064;</string>
    <string name="icon_resize_full">&#xf065;</string>
    <string name="icon_resize_small">&#xf066;</string>
    <string name="icon_plus">&#xf067;</string>
    <string name="icon_minus">&#xf068;</string>
    <string name="icon_asterisk">&#xf069;</string>
    <string name="icon_exclamation_sign">&#xf06a;</string>
    <string name="icon_gift">&#xf06b;</string>
    <string name="icon_leaf">&#xf06c;</string>
    <string name="icon_fire">&#xf06d;</string>
    <string name="icon_eye_open">&#xf06e;</string>
    <string name="icon_eye_close">&#xf070;</string>
    <string name="icon_warning_sign">&#xf071;</string>
    <string name="icon_plane">&#xf072;</string>
    <string name="icon_calendar">&#xf073;</string>
    <string name="icon_random">&#xf074;</string>
    <string name="icon_comment">&#xf075;</string>
    <string name="icon_magnet">&#xf076;</string>
    <string name="icon_chevron_up">&#xf077;</string>
    <string name="icon_chevron_down">&#xf078;</string>
    <string name="icon_retweet">&#xf079;</string>
    <string name="icon_shopping_cart">&#xf07a;</string>
    <string name="icon_folder_close">&#xf07b;</string>
    <string name="icon_folder_open">&#xf07c;</string>
    <string name="icon_resize_vertical">&#xf07d;</string>
    <string name="icon_resize_horizontal">&#xf07e;</string>
    <string name="icon_bar_chart">&#xf080;</string>
    <string name="icon_twitter_sign">&#xf081;</string>
    <string name="icon_facebook_sign">&#xf082;</string>
    <string name="icon_camera_retro">&#xf083;</string>
    <string name="icon_key">&#xf084;</string>
    <string name="icon_cogs">&#xf085;</string>
    <string name="icon_comments">&#xf086;</string>
    <string name="icon_thumbs_o_up">&#xf087;</string>
    <string name="icon_thumbs_o_down">&#xf088;</string>
    <string name="icon_star_half">&#xf089;</string>
    <string name="icon_heart_empty">&#xf08a;</string>
    <string name="icon_signout">&#xf08b;</string>
    <string name="icon_linkedin_sign">&#xf08c;</string>
    <string name="icon_pushpin">&#xf08d;</string>
    <string name="icon_external_link">&#xf08e;</string>
    <string name="icon_signin">&#xf090;</string>
    <string name="icon_trophy">&#xf091;</string>
    <string name="icon_github_sign">&#xf092;</string>
    <string name="icon_upload_alt">&#xf093;</string>
    <string name="icon_lemon">&#xf094;</string>
    <string name="icon_phone">&#xf095;</string>
    <string name="icon_check_empty">&#xf096;</string>
    <string name="icon_bookmark_empty">&#xf097;</string>
    <string name="icon_phone_sign">&#xf098;</string>
    <string name="icon_twitter">&#xf099;</string>
    <string name="icon_facebook">&#xf09a;</string>
    <string name="icon_github">&#xf09b;</string>
    <string name="icon_unlock">&#xf09c;</string>
    <string name="icon_credit_card">&#xf09d;</string>
    <string name="icon_rss">&#xf09e;</string>
    <string name="icon_hdd">&#xf0a0;</string>
    <string name="icon_bullhorn">&#xf0a1;</string>
    <string name="icon_bell">&#xf0a2;</string>
    <string name="icon_certificate">&#xf0a3;</string>
    <string name="icon_hand_right">&#xf0a4;</string>
    <string name="icon_hand_left">&#xf0a5;</string>
    <string name="icon_hand_up">&#xf0a6;</string>
    <string name="icon_hand_down">&#xf0a7;</string>
    <string name="icon_circle_arrow_left">&#xf0a8;</string>
    <string name="icon_circle_arrow_right">&#xf0a9;</string>
    <string name="icon_circle_arrow_up">&#xf0aa;</string>
    <string name="icon_circle_arrow_down">&#xf0ab;</string>
    <string name="icon_globe">&#xf0ac;</string>
    <string name="icon_wrench">&#xf0ad;</string>
    <string name="icon_tasks">&#xf0ae;</string>
    <string name="icon_filter">&#xf0b0;</string>
    <string name="icon_briefcase">&#xf0b1;</string>
    <string name="icon_fullscreen">&#xf0b2;</string>
    <string name="icon_group">&#xf0c0;</string>
    <string name="icon_link">&#xf0c1;</string>
    <string name="icon_cloud">&#xf0c2;</string>
    <string name="icon_beaker">&#xf0c3;</string>
    <string name="icon_cut">&#xf0c4;</string>
    <string name="icon_copy">&#xf0c5;</string>
    <string name="icon_paper_clip">&#xf0c6;</string>
    <string name="icon_save">&#xf0c7;</string>
    <string name="icon_sign_blank">&#xf0c8;</string>
    <string name="icon_reorder">&#xf0c9;</string>
    <string name="icon_list_ul">&#xf0ca;</string>
    <string name="icon_list_ol">&#xf0cb;</string>
    <string name="icon_strikethrough">&#xf0cc;</string>
    <string name="icon_underline">&#xf0cd;</string>
    <string name="icon_table">&#xf0ce;</string>
    <string name="icon_magic">&#xf0d0;</string>
    <string name="icon_truck">&#xf0d1;</string>
    <string name="icon_money">&#xf0d6;</string>
    <string name="icon_code">&#xf121;</string>
</resources>