<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity$DummySectionFragment" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@color/orange"></LinearLayout>
            
            <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal" >
		        
                <Button
			        android:id="@+id/btnAdversitingIcon"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:text="@string/icon_bullhorn"
			        android:background="@drawable/btn_category_advertising"
			        style="@style/btn_category_icon" />
                
                <Button
			        android:id="@+id/btnAdversiting"
			        android:layout_width="0dp"
			        android:layout_height="match_parent"
			        android:layout_weight="3"
			        android:text="@string/category_advertising"
			        android:background="@drawable/btn_category_advertising"
			        style="@style/btn_category" />
                
		    </LinearLayout>
		    
            <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:orientation="horizontal" >
		        
                <Button
			        android:id="@+id/btnCreatividadIcon"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:text="@string/icon_pencil"
			        android:background="@drawable/btn_category_creatividad"
			        style="@style/btn_category_icon" />
                
                <Button
			        android:id="@+id/btnCreatividad"
			        android:layout_width="0dp"
			        android:layout_height="match_parent"
			        android:layout_weight="3"
			        android:text="@string/category_creatividad"
			        android:background="@drawable/btn_category_creatividad"
			        style="@style/btn_category" />
                
		    </LinearLayout>
            
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:orientation="horizontal" >
		        
                <Button
			        android:id="@+id/btnInsideIcon"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:text="@string/icon_eye_open"
			        android:background="@drawable/btn_category_inside"
			        style="@style/btn_category_icon" />
                
                <Button
			        android:id="@+id/btnInside"
			        android:layout_width="0dp"
			        android:layout_height="match_parent"
			        android:layout_weight="3"
			        android:text="@string/category_inside"
			        android:background="@drawable/btn_category_inside"
			        style="@style/btn_category" />
                
		    </LinearLayout>
		    
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:orientation="horizontal" >
		        
                <Button
			        android:id="@+id/btnMarketingIcon"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:text="@string/icon_shopping_cart"
			        android:background="@drawable/btn_category_marketing"
			        style="@style/btn_category_icon" />
                
                <Button
			        android:id="@+id/btnMarketing"
			        android:layout_width="0dp"
			        android:layout_height="match_parent"
			        android:layout_weight="3"
			        android:text="@string/category_marketing"
			        android:background="@drawable/btn_category_marketing"
			        style="@style/btn_category" />
                
		    </LinearLayout>
		    
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:orientation="horizontal" >
		        
                <Button
			        android:id="@+id/btnNegociosIcon"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:text="@string/icon_money"
			        android:background="@drawable/btn_category_negocios"
			        style="@style/btn_category_icon" />
                
                <Button
			        android:id="@+id/btnNegocios"
			        android:layout_width="0dp"
			        android:layout_height="match_parent"
			        android:layout_weight="3"
			        android:text="@string/category_negocios"
			        android:background="@drawable/btn_category_negocios"
			        style="@style/btn_category" />
                
		    </LinearLayout>
		    
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:orientation="horizontal" >
		        
                <Button
			        android:id="@+id/btnSeoIcon"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:text="@string/icon_thumbs_o_up"
			        android:background="@drawable/btn_category_seo"
			        style="@style/btn_category_icon" />
                
                <Button
			        android:id="@+id/btnSeo"
			        android:layout_width="0dp"
			        android:layout_height="match_parent"
			        android:layout_weight="3"
			        android:text="@string/category_seo"
			        android:background="@drawable/btn_category_seo"
			        style="@style/btn_category" />
                
		    </LinearLayout>

		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:orientation="horizontal" >
		        
                <Button
			        android:id="@+id/btnWebIcon"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:text="@string/icon_code"
			        android:background="@drawable/btn_category_web"
			        style="@style/btn_category_icon" />
                
                <Button
			        android:id="@+id/btnWeb"
			        android:layout_width="0dp"
			        android:layout_height="match_parent"
			        android:layout_weight="3"
			        android:text="@string/category_web"
			        android:background="@drawable/btn_category_web"
			        style="@style/btn_category" />
                
		    </LinearLayout>
            
        </LinearLayout>
    </ScrollView>

</LinearLayout>
