<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp" >
    
    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp" >
        
        <ImageView
	        android:id="@+id/ivImage"
	        android:visibility="gone"
	        android:scaleType="centerCrop"
	        android:layout_width="match_parent"
	        android:layout_height="130dp"
	        android:contentDescription="@string/no_image"
	        android:src="@drawable/no_image" />

        <ProgressBar
            android:id="@+id/pbImage"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <ImageView
            android:id="@+id/ivFavourites"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:src="@android:drawable/star_off" />
        
    </RelativeLayout>

    <TextView
        android:id="@+id/lblDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>
